<resources>
    <string name="app_name">Smail</string>
    <string name="label_home">首页</string>
    <string name="label_user">用户</string>
    <string name="label_settings">设置</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_home">HOME</string>
    <string name="navigation_design">DESIGN</string>
    <string name="navigation_book">读书</string>
    <string name="navigation_movie">电影</string>
    <string name="navigation_music">音乐</string>
    <string name="navigation_tools">工具</string>
    <string name="navigation_settings">设置</string>
    <string name="navigation_weather">天气</string>
    <string name="navigation_feedback">反馈</string>
    <string name="navigation_buckets">BUCKETS</string>
    <string name="navigation_likes">LIKES</string>

    <string name="home_title_broadcast">友邻广播</string>
    <string name="home_title_discover">浏览发现</string>
    <string name="home_title_topic">话题广场</string>
    <string name="home_title_online">线上活动</string>

    <string name="login">登录</string>
    <string name="click_to_login">点击登录</string>
    <string name="login_failed">登录失败，请重试</string>
    <string name="login_success">登录成功</string>
    <string name="logout_success">登出成功</string>
    <string name="not_login">该功能需要您登录 :）</string>

    <string name="follow">Follow</string>
    <string name="shots">Shots</string>
    <string name="buckets">Buckets</string>
    <string name="comments">Comments</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="get_liked">Get liked</string>
    <string name="projects">Projects</string>
    <string name="teams">Teams</string>
    <string name="likes">Likes</string>

    <string name="share">分享</string>
    <string name="open_in_browser">用浏览器打开</string>
    <string name="into_the_bucket">Into the bucket</string>
    <string name="no_description">No Description\n</string>

    <string name="download">下载</string>
    <string name="download_start">下载开始</string>
    <string name="download_failed">下载失败，请稍后重试</string>
    <string name="download_success">下载成功，文件保存至: %s</string>

    <string name="empty_data">load data is null</string>
    <string name="load_data_failed">load data fail</string>
    <string name="fav_failed">点赞失败，请稍后重试</string>

    <string name="setting_last_version">您已经是最新版了</string>
    <string name="add_comment_hint">Add your comment</string>
    <string name="empty_comment_hint">评论内容不能为空哦</string>
    <string name="error_add_comment">添加评论失败，请稍后重试</string>
    <string name="error_no_player">Your account may not be Player or Team</string>
</resources>
